committed by cx

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,8 @@ layout: page
 title: contact
 ---
 
-{{ site.data.settings.contact | markdownify }}
+
 
 <br>
 email: kxxhmr(at)gmail.com
+telegram: uexprrr 
