--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@ layout: default
 title: Home
 ---
 
+  <nav>
+    {% for item in site.data.settings.menu %}
+      <a href="{{ site.github.url }}/{{ item.url }}">{{ item.name }}</a>
+    {% endfor %}
+  </nav>
+  
+
+<br>
+<br>
+<br>
+
 <section>
   <div class="blog-container">
     {% for post in site.posts %}
