committed by cx

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@ title: Home
 
 
 <section>
+    {% for item in site.data.settings.menu %}
+      <a href="{{ site.github.url }}/{{ item.url }}">{{ item.name }}</a>
+    {% endfor %}
+</section>
+
+<section>
   <div class="blog-container">
     {% for post in site.posts %}
       <div class="blog-unit">
