committed by cx

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,5 +7,9 @@ title: contact
 
 <br>
 telegram: uexprrr 
+<br>
+instagram: s_aigyou
+<br>
+email: kxxhmr@gmail.com
 <br><br>
 portfolio: <a href="https://c-aixiao.com/">c-aixiao.com</a>
