committed by cx

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,11 +5,11 @@ title: contact
 
 
 
+<br>telegram: uexprrr 
+<br>instagram: s_aigyou
+<br>email: kxxhmr@gmail.com
+<br>微信: kxxhm_r
+<br>微博: 记得当时在喝饮料
+<br>微博: 我现在脑子也是浆糊
 <br>
-telegram: uexprrr 
-<br>
-instagram: s_aigyou
-<br>
-email: kxxhmr@gmail.com
-<br><br>
-portfolio: <a href="https://c-aixiao.com/">c-aixiao.com</a>
+<br>portfolio: <a href="https://c-aixiao.com/">c-aixiao.com</a>
