committed by cx

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@ title: contact
 <br>instagram: s_aigyou
 <br>email: kxxhmr@gmail.com
 <br>微信: kxxhm_r
-<br>微博: 记得当时在喝饮料
-<br>微博: 我现在脑子也是浆糊
+<br>微博: 有顏色的風景
+<br>微博: 我现在脑子也是浆糊_
 <br>
-<br>portfolio: <a href="https://c-aixiao.com/">c-aixiao.com</a>
+<br>homepage: <a href="https://c-aixiao.com/">c-aixiao.com</a>
