committed by cx

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,11 +5,11 @@ title: contact
 
 
 
-<br>telegram: uexprrr 
-<br>instagram: s_aigyou
+<br><a href="https://c-aixiao.com/">c-aixiao.com</a>
 <br>email: kxxhmr@gmail.com
-<br>微信: kxxhm_r
-<br>微博: 有顏色的風景
-<br>微博: 我现在脑子也是浆糊_
 <br>
-<br>homepage: <a href="https://c-aixiao.com/">c-aixiao.com</a>
+<br>b站: 蔡驍
+<br>公衆號: 蔡驍
+<br>微博: 我现在脑子也是浆糊_
+<br>微博: 有顏色的風景
+<br>instagram: s_aigyou
