committed by cx

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@ title: contact
 
 
 <br><a href="https://c-aixiao.com/">c-aixiao.com</a>
-<br>email: kxxhmr@gmail.com
+<br>kxxhmr@gmail.com
 <br>
 <br>b站: 蔡驍
 <br>公衆號: 蔡驍
